# VIT-Project-InvoiceProcessing

./: .env.sample  .gitattributes  .gitignore  README-V2.md  README.md  package-lock.json  package.json
backend/: demo-live-2.csv  demo-live.csv  package.json  phase2-fail.csv  phase2-fresh.csv  phase2-real.csv  phase3-smoke.csv  test-csv-sample.csv  tsconfig.json
backend/scripts/: hash-password.js
backend/src/: app.module.ts  main.ts
database-backup/: README.md  invoice-processing-data-backup.sql
db/migrations/: 001_create_users.sql  002_create_invoice_batches.sql  003_create_invoice_records.sql  004_create_file_uploads.sql  (+8 more)
docs/: InvoiceProcessing_LLD_v3.0.docx  InvoiceProcessing_LLD_v3.1_Addendum.docx  ~$voiceProcessing_LLD_v3.1_Addendum.docx
frontend/: next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
python/: pyproject.toml
python/app/: main.py
python/app/config/: settings.py
python/app/exceptions/: exceptions.py
python/app/models/: invoice_fields.py
python/app/providers/: _shared.py  anthropic_provider.py  base_provider.py  nano_banana_provider.py  openai_provider.py  provider_factory.py  stub_provider.py
python/app/routers/: eda_router.py  preprocessing_router.py
python/app/services/: confidence_scorer.py  extraction_service.py  multi_page_merger.py  ocr_service.py  pdf_service.py  rule_engine.py
python/app/utils/: logger.py  utils.py
python/config/: settings.py
python/tests/: test_confidence_scorer.py  test_llm_providers.py  test_multi_page_merger.py  test_rule_engine.py
(+152 files in other folders)
